changes to dezign

--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -6,9 +6,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>DevMasters Portfolio</title>
-	<link rel="icon" href="https://i.pinimg.com/originals/0f/8b/28/0f8b2870896edcde8f6149fe2733faaf.jpg"
-		type="image/x-icon">
-	<script src="https://kit.fontawesome.com/a243bcb0fc.js" crossorigin="anonymous"></script>
+	<!-- <link rel="icon" href="https://drive.google.com/file/d/15Z6XLc0_nbntmBoG52wbRfszZSb-6SJs/view?usp=sharing"
+		type="image/png"> -->
+	<link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+	<script src="https://kit.fontawesome.com/a243bcb0fc.js" crossorigin="anonymous">
+	</script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800|Montserrat:600,900&display=swap"
 		rel="stylesheet">
@@ -17,11 +19,19 @@
 
 <body>
 
+	<a href="#footer" class="float">
+		<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-down-circle-fill my-float"
+			fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+			<path fill-rule="evenodd"
+				d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 5a.5.5 0 0 0-1 0v4.793L5.354 7.646a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 9.793V5z" />
+		</svg>
+	</a>
+
 	<div class="nav">
 		<input type="checkbox" id="nav-check">
 		<div class="nav-header">
-			<div class="nav-title" style="color: #c8d6e5">
-				<svg width=".9em" height=".85em" viewBox="0 0 16 16" class="bi bi-code-slash" fill="#dff9fb"
+			<div class="nav-title">
+				<svg width=".9em" height=".85em" viewBox="0 0 16 16" class="bi bi-code-slash" fill="#d1d6db"
 					xmlns="http://www.w3.org/2000/svg">
 					<path fill-rule="evenodd"
 						d="M4.854 4.146a.5.5 0 0 1 0 .708L1.707 8l3.147 3.146a.5.5 0 0 1-.708.708l-3.5-3.5a.5.5 0 0 1 0-.708l3.5-3.5a.5.5 0 0 1 .708 0zm6.292 0a.5.5 0 0 0 0 .708L14.293 8l-3.147 3.146a.5.5 0 0 0 .708.708l3.5-3.5a.5.5 0 0 0 0-.708l-3.5-3.5a.5.5 0 0 0-.708 0zm-.999-3.124a.5.5 0 0 1 .33.625l-4 13a.5.5 0 0 1-.955-.294l4-13a.5.5 0 0 1 .625-.33z" />
@@ -80,7 +90,8 @@
 				to indulge in Healthy Competition, <span> { <p>like Hackathons, Code Alongs, Code Relays ...</p> }
 				</span>
 				and
-				thus Try to improve ourselves along with each other. We Passionately tackle the challenges thrown to us. Currently, we are Working on <span> { <p>React, Advanced CSS, Javascript ...</p> } " </span>
+				thus Try to improve ourselves along with each other. We Passionately tackle the challenges thrown to us.
+				Currently, we are Working on <span> { <p>React, Advanced CSS, Javascript ...</p> } " </span>
 				<i class="fas fa-pencil-alt blink"></i> <br>
 				<br> ];
 			</div>
