--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -8,7 +8,7 @@
 	<title>DevMasters Portfolio</title>
 	<!-- <link rel="icon" href="https://drive.google.com/file/d/15Z6XLc0_nbntmBoG52wbRfszZSb-6SJs/view?usp=sharing"
 		type="image/png"> -->
-	<link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="img/android-chrome-192x192.png">
 	<script src="https://kit.fontawesome.com/a243bcb0fc.js" crossorigin="anonymous">
 	</script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
