--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -19,13 +19,13 @@
 
 <body>
 
-	<a href="#footer" class="float">
+	<!-- <a href="#footer" class="float">
 		<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-down-circle-fill my-float"
 			fill="currentColor" xmlns="http://www.w3.org/2000/svg">
 			<path fill-rule="evenodd"
 				d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 5a.5.5 0 0 0-1 0v4.793L5.354 7.646a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 9.793V5z" />
 		</svg>
-	</a>
+	</a> -->
 
 	<div class="nav">
 		<input type="checkbox" id="nav-check">
@@ -232,6 +232,18 @@
 			</div>
 		</div>
 		<p class="text-end">All Rights Reserved @<a href="#">DevMasters91</a> 2020.</p>
+
+		<a href="#header" onclick="topFunction()" id="myTopBtn" title="Go to top">
+			<svg width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-box-arrow-in-up" fill="currentColor"
+				xmlns="http://www.w3.org/2000/svg">
+				<path fill-rule="evenodd"
+					d="M4.646 7.854a.5.5 0 0 0 .708 0L8 5.207l2.646 2.647a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 0 0 0 .708z" />
+				<path fill-rule="evenodd" d="M8 15a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 0-1 0v9a.5.5 0 0 0 .5.5z" />
+				<path fill-rule="evenodd"
+					d="M1.5 2.5A1.5 1.5 0 0 1 3 1h10a1.5 1.5 0 0 1 1.5 1.5v8A1.5 1.5 0 0 1 13 12h-1.5a.5.5 0 0 1 0-1H13a.5.5 0 0 0 .5-.5v-8A.5.5 0 0 0 13 2H3a.5.5 0 0 0-.5.5v8a.5.5 0 0 0 .5.5h1.5a.5.5 0 0 1 0 1H3a1.5 1.5 0 0 1-1.5-1.5v-8z" />
+			</svg>
+		</a>
+
 	</footer>
 
 
